Fixed the player selection buttons being too close together

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,6 @@ body{
     display: flex;
     justify-content: center;
     align-content: center;
-    gap: 10px;
+    gap: 15px;
     margin: 10px;
 }
